# prompt-cache-optimizer

./: .gitignore  ANALYSIS.md  LICENSE  README.md  WHY_IT_WORKS.md  pyproject.toml
.github/workflows/: publish.yml
cli/: __init__.py  gui.py  main.py  proxy.py  rcconfig.py
docs/: usage.md
examples/: experiment.py  experiment_deepseek.py  optimized_prompt.json  raw_prompt.json
gui/: index.html
optimizer/: __init__.py  aligner.py  config.py  diagnoser.py  formatter.py  normalizer.py  providers.json  reorderer.py  safety.py
tests/: test_adversarial.py  test_adversarial_v030.py  test_aligner.py  test_diagnoser.py  test_formatter.py  test_normalizer.py  test_reorderer.py
