[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poptimize"
version = "0.3.0"
description = "Prompt structure optimizer — maximize LLM API cache hit rates without changing semantics"
authors = [{name = "Prompt Optimizer contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "prompt-caching", "deepseek", "openai", "anthropic", "optimizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
all = ["tiktoken"]

[project.urls]
Homepage = "https://github.com/vansye/prompt-cache-optimizer"
Source = "https://github.com/vansye/prompt-cache-optimizer"

[project.scripts]
popt = "cli.main:main"

[tool.setuptools.packages.find]
include = ["optimizer*", "cli*"]

[tool.setuptools.package-data]
optimizer = ["providers.json"]
